[gd_scene load_steps=11 format=3 uid="uid://diy53gfvbephm"]

[ext_resource type="Script" path="res://Game/Views/Arena/Arena.gd" id="1_7fl8o"]
[ext_resource type="Texture2D" uid="uid://cwgm0dwilia3h" path="res://Assets/Tiles/[64x64] Dungeon Bricks Full.png" id="2_3xusy"]
[ext_resource type="PackedScene" uid="uid://cimw4cosut6qa" path="res://Game/UI/SelectionRect.tscn" id="3_jt56x"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y2lci"]
texture = ExtResource("2_3xusy")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
7:6/0 = 0

[sub_resource type="TileSet" id="TileSet_eve8d"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_y2lci")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3qq3m"]
vertices = PackedVector2Array(40, 53, 723, 51, 729, 426, 37, 427)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(40, 53, 723, 51, 729, 426, 37, 427)])

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_h3ska"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_mvm7w"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_n4okj"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_2hkw6"]

[node name="Arena" type="Node2D"]
script = ExtResource("1_7fl8o")

[node name="ArenaLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="TileMap" type="TileMap" parent="ArenaLayer"]
tile_set = SubResource("TileSet_eve8d")
cell_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(65536, 720896, 6, 131072, 720896, 6, 196608, 720896, 6, 262144, 720896, 6, 327680, 720896, 6, 393216, 720896, 6, 393217, 720896, 6, 393218, 720896, 6, 393219, 720896, 6, 393220, 720896, 6, 393221, 720896, 6, 393222, 720896, 6, 393223, 720896, 6, 393224, 720896, 6, 393225, 720896, 6, 393226, 720896, 6, 327690, 720896, 6, 262154, 720896, 6, 196618, 720896, 6, 131082, 720896, 6, 65546, 720896, 6, 65545, 720896, 6, 65544, 720896, 6, 65543, 720896, 6, 131079, 720896, 6, 131078, 720896, 6, 131077, 720896, 6, 131076, 720896, 6, 131075, 720896, 6, 131074, 720896, 6, 131073, 720896, 6, 65537, 720896, 6, 65538, 720896, 6, 65539, 720896, 6, 65540, 720896, 6, 65541, 720896, 6, 65542, 720896, 6, 196609, 720896, 6, 262145, 720896, 6, 262146, 720896, 6, 262147, 720896, 6, 262148, 720896, 6, 262149, 720896, 6, 262150, 720896, 6, 196613, 720896, 6, 196612, 720896, 6, 196611, 720896, 6, 196610, 720896, 6, 327681, 720896, 6, 327682, 720896, 6, 327683, 720896, 6, 327684, 720896, 6, 327685, 720896, 6, 327686, 720896, 6, 327687, 720896, 6, 327688, 720896, 6, 327689, 720896, 6, 262153, 720896, 6, 262152, 720896, 6, 262151, 720896, 6, 196617, 720896, 6, 131080, 720896, 6, 196614, 720896, 6, 196615, 720896, 6, 196616, 720896, 6, 131081, 720896, 6, 0, 720896, 6, 1, 720896, 6, 2, 720896, 6, 3, 720896, 6, 4, 720896, 6, 5, 720896, 6, 6, 720896, 6, 7, 720896, 6, 8, 720896, 6, 9, 720896, 6, 10, 720896, 6, 65547, 720896, 6, 131083, 720896, 6, 196619, 720896, 6, 262155, 720896, 6, 327691, 720896, 6, 393227, 720896, 6, 11, 720896, 6)

[node name="Arena" type="Control" parent="ArenaLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="ArenaLayer"]
navigation_polygon = SubResource("NavigationPolygon_3qq3m")

[node name="StaticBody2D" type="StaticBody2D" parent="ArenaLayer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArenaLayer/StaticBody2D"]
position = Vector2(20, 214)
shape = SubResource("WorldBoundaryShape2D_h3ska")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ArenaLayer/StaticBody2D"]
position = Vector2(348, 32)
shape = SubResource("WorldBoundaryShape2D_mvm7w")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ArenaLayer/StaticBody2D"]
position = Vector2(749, 229)
shape = SubResource("WorldBoundaryShape2D_n4okj")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ArenaLayer/StaticBody2D"]
position = Vector2(348, 448)
shape = SubResource("WorldBoundaryShape2D_2hkw6")

[node name="HUDLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="SelectionRect" parent="HUDLayer" instance=ExtResource("3_jt56x")]

[node name="FrameLayer" type="CanvasLayer" parent="."]
layer = 15

[node name="FrameFG" type="TileMap" parent="FrameLayer"]
tile_set = SubResource("TileSet_eve8d")
cell_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(10, 262144, 0, 9, 262144, 0, 8, 262144, 0, 7, 262144, 0, 6, 262144, 0, 5, 262144, 0, 4, 262144, 0, 3, 262144, 0, 2, 262144, 0, 1, 262144, 0, 65536, 393216, 6, 131072, 393216, 6, 196608, 393216, 6, 262144, 393216, 6, 327680, 393216, 6, 393216, 524288, 6, 0, 196608, 0, 11, 327680, 0, 12, 196608, 0, 13, 262144, 0, 14, 262144, 0, 15, 327680, 0, 458752, 196608, 0, 458753, 262144, 0, 458754, 262144, 0, 458755, 262144, 0, 458756, 262144, 0, 458757, 262144, 0, 458758, 262144, 0, 458759, 262144, 0, 458760, 262144, 0, 458761, 262144, 0, 458762, 262144, 0, 65547, 327680, 6, 131083, 327680, 6, 196619, 327680, 6, 262155, 327680, 6, 327691, 327680, 6, 393227, 458752, 6, 65551, 327680, 6, 131087, 327680, 6, 196623, 327680, 6, 262159, 327680, 6, 327695, 327680, 6, 393231, 327680, 6, 458767, 327680, 6, 524303, 327680, 2, 524302, 262144, 2, 524301, 262144, 2, 524300, 196608, 2, 524299, 327680, 2, 524298, 262144, 2, 524297, 262144, 2, 524296, 262144, 2, 524295, 262144, 2, 524294, 262144, 2, 524293, 262144, 2, 524292, 262144, 2, 524291, 262144, 2, 524290, 262144, 2, 524289, 262144, 2, 524288, 196608, 2, 458763, 327680, 0, 65548, 393216, 6, 131084, 393216, 6, 196620, 393216, 6, 262156, 393216, 6, 327692, 393216, 6, 393228, 393216, 6, 458764, 393216, 6)

[node name="FrameBG" type="TileMap" parent="FrameLayer"]
z_index = -10
tile_set = SubResource("TileSet_eve8d")
cell_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(10, 262144, 0, 9, 262144, 0, 8, 262144, 0, 7, 262144, 0, 6, 262144, 0, 5, 262144, 0, 4, 262144, 0, 3, 262144, 0, 2, 262144, 0, 1, 262144, 0, 65536, 393216, 6, 131072, 393216, 6, 196608, 393216, 6, 262144, 393216, 6, 327680, 393216, 6, 393216, 524288, 6, 0, 196608, 0, 11, 327680, 0, 12, 589824, 1, 13, 589824, 1, 14, 589824, 1, 15, 589824, 1, 458752, 589824, 1, 458753, 589824, 1, 458754, 589824, 1, 458755, 589824, 1, 458756, 589824, 1, 458757, 589824, 1, 458758, 589824, 1, 458759, 589824, 1, 458760, 589824, 1, 458761, 589824, 1, 458762, 589824, 1, 65547, 327680, 6, 131083, 327680, 6, 196619, 327680, 6, 262155, 327680, 6, 327691, 327680, 6, 393227, 458752, 6, 65551, 589824, 1, 131087, 589824, 1, 196623, 589824, 1, 262159, 589824, 1, 327695, 589824, 1, 393231, 589824, 1, 458767, 589824, 1, 524303, 589824, 1, 524302, 589824, 1, 524301, 589824, 1, 524300, 589824, 1, 524299, 589824, 1, 524298, 589824, 1, 524297, 589824, 1, 524296, 589824, 1, 524295, 589824, 1, 524294, 589824, 1, 524293, 589824, 1, 524292, 589824, 1, 524291, 589824, 1, 524290, 589824, 1, 524289, 589824, 1, 524288, 589824, 1, 458763, 589824, 1, 65548, 589824, 1, 131084, 589824, 1, 196620, 589824, 1, 262156, 589824, 1, 327692, 589824, 1, 393228, 589824, 1, 458764, 589824, 1, 131085, 589824, 1, 65549, 589824, 1, 65550, 589824, 1, 196622, 589824, 1, 131086, 589824, 1, 458766, 589824, 1, 262158, 589824, 1, 327694, 589824, 1, 393230, 589824, 1, 393229, 589824, 1, 458765, 589824, 1, 327693, 589824, 1, 262157, 589824, 1, 196621, 589824, 1)

[node name="TextureRect" type="TextureRect" parent="FrameLayer"]
offset_right = 959.0
offset_bottom = 637.0

[node name="WireFrame" type="CanvasLayer" parent="."]
layer = 50

[node name="Viewport" type="ReferenceRect" parent="WireFrame"]
offset_left = 19.0
offset_top = 32.0
offset_right = 749.0
offset_bottom = 448.0
border_color = Color(0.211765, 1, 0, 1)
metadata/_edit_lock_ = true

[connection signal="gui_input" from="WireFrame/Viewport" to="." method="_on_viewport_gui_input"]
